--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,11 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#686868"
     tools:context=".MainActivity">
 
     <TableLayout
-        android:layout_width="358dp"
-        android:layout_height="237dp"
+        android:layout_width="378dp"
+        android:layout_height="272dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.49"
@@ -18,35 +19,47 @@
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="match_parent" >
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/button18"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="clearBtn"
-                android:text="Clear" />
+                android:text="@string/clear" />
 
             <Button
                 android:id="@+id/button20"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="lBracketBtn"
-                android:text="(" />
+                android:text="@string/lBracket" />
 
             <Button
                 android:id="@+id/button19"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="rBracketBtn"
-                android:text=")" />
+                android:text="@string/rBracket" />
 
             <Button
                 android:id="@+id/button17"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="divideBtn"
-                android:text="DIVIDE" />
+                android:text="@string/divide" />
         </TableRow>
 
         <TableRow
@@ -55,31 +68,43 @@
 
             <Button
                 android:id="@+id/button"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="sevenBtn"
-                android:text="7" />
+                android:text="@string/seven" />
 
             <Button
                 android:id="@+id/button5"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="eightBtn"
-                android:text="8" />
+                android:text="@string/eight" />
 
             <Button
                 android:id="@+id/button2"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="nineBtn"
-                android:text="9" />
+                android:text="@string/nine" />
 
             <Button
                 android:id="@+id/button10"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="multiplyBtn"
-                android:text="x" />
+                android:text="@string/multiply" />
         </TableRow>
 
         <TableRow
@@ -88,31 +113,43 @@
 
             <Button
                 android:id="@+id/button3"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="fourBtn"
-                android:text="4" />
+                android:text="@string/four" />
 
             <Button
                 android:id="@+id/button11"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="fiveBtn"
-                android:text="5" />
+                android:text="@string/five" />
 
             <Button
                 android:id="@+id/button6"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="sixBtn"
-                android:text="6" />
+                android:text="@string/six" />
 
             <Button
                 android:id="@+id/button4"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="minusBtn"
-                android:text="-" />
+                android:text="@string/minus" />
         </TableRow>
 
         <TableRow
@@ -121,31 +158,43 @@
 
             <Button
                 android:id="@+id/button7"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="oneBtn"
-                android:text="1" />
+                android:text="@string/one" />
 
             <Button
                 android:id="@+id/button12"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="twoBtn"
-                android:text="2" />
+                android:text="@string/two" />
 
             <Button
                 android:id="@+id/button9"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="threeBtn"
-                android:text="3" />
+                android:text="@string/three" />
 
             <Button
                 android:id="@+id/button8"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="plusBtn"
-                android:text="+" />
+                android:text="@string/plus" />
         </TableRow>
 
         <TableRow
@@ -155,29 +204,37 @@
             <Button
                 android:id="@+id/button15"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="+/-" />
+                android:layout_height="wrap_content" />
 
             <Button
                 android:id="@+id/button14"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="zeroBtn"
-                android:text="0" />
+                android:text="@string/zero" />
 
             <Button
                 android:id="@+id/button16"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="decimalBtn"
-                android:text="." />
+                android:text="@string/decimal" />
 
             <Button
                 android:id="@+id/button13"
+                style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="2dp"
+                android:background="@drawable/button_shape"
                 android:onClick="equalsBtn"
-                android:text="=" />
+                android:text="@string/equals" />
         </TableRow>
 
     </TableLayout>
